solved some Alignment problem.

--- a/src/css/css-responsive.css
+++ b/src/css/css-responsive.css
@@ -80,7 +80,7 @@
 
 @media screen and (width < 768px) {
   .product-main-text-container {
-    margin-top: 45rem;
+    margin-top: 46rem;
   }
 
   .product_section_1 {
